--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="avatar" id="profileimg"></div>
                     <div class="noti">2</div>
                 </div>
-                <div class="username"><p style="font-weight: 700;" id="my_username">Username, Gallery</p></div>
+                <div class="username"><a href="https://github.com/KwnxpN" style="font-weight: 700;" id="my_username">Username, Gallery</a></div>
                 <div class="user_input">
                     <!-- Input -->
                     <div class="usernameInp"><label style="font-size: 14px;">Set Username</label><input type="text" id="get_username" style="margin-left: 5px;"><button type="submit" style="margin-left: 5px;" onclick="display()">set</button></div>
